--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image to Docker Hub
-        run: docker push your-dockerhub-username/credit-simulator
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/credit-simulator
