--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,10 @@ on:
 
 jobs:
   build-test-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - name: Checkout code
@@ -20,6 +23,14 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven
+
       - name: Build with Maven (skip tests for Docker build)
         run: mvn clean package -DskipTests
 
@@ -27,7 +38,9 @@ jobs:
         run: mvn test
 
       - name: Build Docker image
-        run: docker build -t jemmiepriadi/credit-simulator .
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/credit-simulator .
+          docker buildx build --platform linux/amd64,linux/arm64 -t  ${{ secrets.DOCKER_USERNAME }}/credit-simulator .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
