--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,12 @@ jobs:
         run: mvn test
 
       - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/credit-simulator .
-          docker buildx build --platform linux/amd64,linux/arm64 -t  ${{ secrets.DOCKER_USERNAME }}/credit-simulator .
+        uses: docker/build-push-action@v6
+        with:
+            platforms: linux/amd64,linux/arm64
+            load: true
+            tags: user/app:latest
+
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
