--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
             platforms: linux/amd64,linux/arm64
-            load: true
+            push: true
             tags: user/app:latest
 
 
