--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ ubuntu-latest, windows-latest ]
 
     steps:
       - name: Checkout code
@@ -37,13 +37,8 @@ jobs:
       - name: Run Unit Tests
         run: mvn test
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v6
-        with:
-            platforms: linux/amd64,linux/arm64
-            push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/credit-simulator:latest
-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -51,5 +46,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/credit-simulator
+      - name: Build and Push Docker Image (Multi-Arch)
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/credit-simulator:latest
